--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,11 @@ src/main/resources/docs/
 *.iml
 bin/
 
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
 /text-ui-test/ACTUAL.TXT
-text-ui-test/EXPECTED-UNIX.TXT
+/text-ui-test/EXPECTED.TXT
