Add JAR file and delete redundant file
Created the updated Fat JAR file that incorporates JavaFX libaries,
allowing the user to interact with the chat GUI.

Removed the redundant file FeedMe as now the main class is Main and
called using the Launcher class. FeedMe is no longer used.

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ checkstyle {
 }
 
 shadowJar {
-    mainClassName = "feedme.FeedMe"
+    mainClassName = "feedme.Launcher"
     archiveBaseName = "feedme"
     archiveClassifier = null
 }
